--- a/client/src/assets/scss/login.scss
+++ b/client/src/assets/scss/login.scss
@@ -2,10 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; // This assumes that the container is the full height of the viewport
+    height: 100vh;
   
     .card-box {
-      // border: 1px solid black;
       width: 100%;
       box-shadow: 1px 14px 31px 1px rgba(157,149,149,0.75);
       -webkit-box-shadow: 1px 14px 31px 1px rgba(157,149,149,0.75);
@@ -13,10 +12,10 @@
       height: 80%;
   
       @media only screen and (max-width: 1300px) {
-        margin: 200px 50px 239px 50px; // Apply different margin values for smaller screens
+        margin: 200px 50px 239px 50px; 
       }
       @media only screen and (max-width: 425px) {
-        margin: 250px 30px 239px 30px; // Apply different margin values for smaller screens
+        margin: 250px 30px 239px 30px; 
       }
         
       .card-content {
@@ -37,8 +36,10 @@
         .logo {
             display: flex;
             @media only screen and (max-width: 500px){
-                // width: 50%;
                 margin: 10px 30px;
+            }
+            @media only screen and (max-width: 375px){
+                margin: -10px 20px;
             }
           img {
            
@@ -63,11 +64,7 @@
         align-items: center;
         width: 100%;
         @media only screen and (max-width: 1300px) {
-            // position: static;
-            // width: 80%;
-            // height: 100%;
-            // justify-content: center;
-            // align-items: center;
+          
           }
         .form {
             bottom: 30%;
