--- a/client/src/assets/scss/login.scss
+++ b/client/src/assets/scss/login.scss
@@ -100,13 +100,13 @@
                 transform: translateY(-50%);
                 color: #ccc;
               }
-              .button {
+              .custom-button {
                 width: 60%;
                 border-radius: 100px;
                 background-color: #34a953;
                 color: white;
               }
-              .button:hover{
+              .custom-button:hover{
                 background-color: #67d284;
               }
             }
