Implemented footer component

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,2 +1,3 @@
-@import url('./login.scss');
-@import url('./dropDown.scss');
+@import './login.scss';
+@import './dropDown.scss';
+@import './footer.scss';
