Done making pagination component

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,4 +1,4 @@
 @import './login.scss';
 @import './dropDown.scss';
 @import './footer.scss';
-@import './dropDown.scss');
+@import './pagination.scss';
