--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -4,3 +4,5 @@
 @import './card.scss';
 @import './dashboard.scss';
 @import './pagination.scss';
+@import './dropDown.scss';
+@import './table.scss';
