--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,8 +1,12 @@
 @import './login.scss';
 @import './dropDown.scss';
 @import './footer.scss';
+@import './header.scss';
 @import './card.scss';
-@import './dashboard.scss';
+@import './graphDashboard.scss';
 @import './pagination.scss';
 @import './dropDown.scss';
 @import './table.scss';
+@import './register.scss';
+@import './dashboard.scss';
+
