--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -9,5 +9,5 @@
 @import './table.scss';
 @import './register.scss';
 @import './dashboard.scss';
-@import './errorMessage.scss';
+@import './messageAlert.scss';
 
