--- a/client/src/assets/scss/table.scss
+++ b/client/src/assets/scss/table.scss
@@ -6,28 +6,29 @@ table.table_header {
     margin: 14px;
 }
 .tr_header{
-    border-top: 2px solid #b5b5b5;
-    border-left: 2px solid #b5b5b5;
-    border-right: 2px solid #b5b5b5;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
     background-color: #e3e3e3;
 }
 
 .tr_title{
-    border-left: 2px solid #b5b5b5;
-    border-right: 2px solid #b5b5b5;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
     background-color: #e3e3e3;
 }
 
 .tr_dates{
-    border-left: 2px solid #b5b5b5;
-    border-bottom: 2px solid #b5b5b5;
-    border-right: 2px solid #b5b5b5;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
     background-color: #e3e3e3;
 }
 
 td.td_right {
-    text-align: end !important;
+    text-align: center !important;
     padding: 13px 0px;
+    border: 1px solid;
 }
 
 td.td_center {
@@ -49,6 +50,7 @@ td.td_first {
 
 .header_center{
     text-align: center !important;
+    border-left: 1px solid black;
 }
 
 .input_right{
@@ -57,4 +59,43 @@ td.td_first {
 }
 .input_right:focus {
     border-color:  #b5b5b5 !important;
+}
+
+.tableGrid{
+    border: 1px solid black;
+    width: 100%;
+}
+
+.scrollable_container {
+    max-height: 500px; /* Set the maximum height of the container */
+    overflow-y: auto; /* Enable vertical scrolling */
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+}
+.scrollable_container::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+.scrollable_container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.scrollable_container::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 1px solid #f1f1f1;
+}
+
+.scrollable_container::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.td_no {
+    width: 100px;
+    text-align: 'center';
+}
+
+td.td_border {
+    border-right: 1px solid black;
 }
