Project Data Create FrontEnd

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -11,4 +11,6 @@
 @import './dashboard.scss';
 @import './messageAlert.scss';
 @import './projectDataList.scss';
+@import './projectDataCreate.scss';
+
 
