--- a/client/src/assets/scss/pagination.scss
+++ b/client/src/assets/scss/pagination.scss
@@ -83,6 +83,13 @@
           color: #fff;
         }
       }
+      select{
+        padding: 5px 10px;
+        margin: 0;
+        border: 1px solid #ccc;
+        background-color: #f2f2f2;
+        cursor: pointer;
+      }
     }
   }
 }
