personnel expenses list

--- a/client/src/assets/scss/projectDataList.scss
+++ b/client/src/assets/scss/projectDataList.scss
@@ -103,6 +103,7 @@
                                 .proj_table_title_content_vertical{
                                     // border: 2px solid #000;
                                     color: #fff;
+                                    width: 200px;
                                 }
                             }
                             .proj_table_body{
