Done modifying UI of three pages

--- a/client/src/assets/scss/dashboard.scss
+++ b/client/src/assets/scss/dashboard.scss
@@ -1,9 +1,8 @@
 // custom scss for dashboard
 .wrapper{
-    background-color: #EFEDEA;
     max-width: 2560px;
     .header_cont{
-        margin: 0px 0px 10px 0px;
+        margin: 0px 0px 0px 0px;
         .header_container{
             background-color: #fff;
             padding: 5px 5px 10px 5px;
@@ -29,135 +28,155 @@
             }
           }
     }
-    .body_cont{
+    .content_wrapper{
         display: flex;
+        background-color: #EFEDEA;
         @media only screen and (max-width: 1000px){
-            display: block;
+            flex-direction: column;
         }
-        .card_cont{
-            width: 100%;
+        .sidebar{
+            flex: 0 0 180px;
+            background-color: #1c302c;
+            @media only screen and (max-width: 1000px){
+                flex: 0 0 auto;
+                width: 100%;
+                display: none;
+            }
+        }
+        .dashboard_content{
+            flex: 1;
             display: flex;
-            padding: 5px;
-            @media only screen and (max-width: 1000px){
-                max-width: 1000px;
-                margin: 0 auto;
-                padding: 10px;
-            }
-            @media only screen and (max-width: 451px){
-                display: block;
-            }
-            .card{
+            flex-direction: column;
+            .body_cont{
+                display: flex;
+                margin-top: 10px;
                 @media only screen and (max-width: 1000px){
-                    width: auto;
+                    display: block;
                 }
-            }
-            .left_card{
-                width: 50%;
-                @media only screen and (max-width: 451px){
-                    width: 100%;
-                }
-            }
-            .right_card{
-                width: 50%;
-                @media only screen and (max-width: 451px){
-                    width: 100%;
-                }
-            }
-            .custom-card-content{
-                margin: 10px 0px 10px 10px;
-                .text1{
-                    font-weight: 800;
-                }
-                .numTxt{
-                    font-size: 24px;
-                    font-weight: bolder;
-                    .totalTxt{
-                        font-size: 12px;
-                    }
-                }
-                .text2{
-                    font-weight: 800;
-                }
-            }
-        }
-        .graph_cont{
-            width: 100%;
-            padding: 5px;
-            @media only screen and (max-width: 1000px){
-                max-width: 1000px;
-                margin: 0 auto;
-                padding: 10px;
-            }
-            .graph_wrap{
-                .card-custom{
-                    margin-left: 0 !important;
-                    margin-top: 0 !important;
-                    width: 100% !important;
-                    height: 25.5rem !important;
-                    .custom-bar{
-                        width: 90% !important;
-                    
-                    }
-                }
-            }
-        }
-    }
-    .bottom_cont{
-        margin-top: 20px;
-        width: 100%;
-        padding: 5px;
-        .table_bg{
-            background-color: #fff;
-            box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            .pagination_cont{
-                max-width: 1700px;
-                @media only screen and (max-width: 1000px){
-                    max-width: 1000px;
-                }
-                .paginate{
+                .card_cont{
                     width: 100%;
                     display: flex;
-                    justify-content: flex-end;
-                    padding: 30px 50px 0px 0px;
-                    @media only screen and (max-width: 426px){
-                        padding: 30px 0px 0px 0px;
+                    padding: 5px;
+                    @media only screen and (max-width: 1000px){
+                        max-width: 1000px;
+                        margin: 0 auto;
+                        padding: 10px;
+                    }
+                    @media only screen and (max-width: 451px){
+                        display: block;
+                    }
+                    .card{
+                        @media only screen and (max-width: 1000px){
+                            width: auto;
+                        }
+                    }
+                    .left_card{
+                        width: 50%;
+                        @media only screen and (max-width: 451px){
+                            width: 100%;
+                        }
+                    }
+                    .right_card{
+                        width: 50%;
+                        @media only screen and (max-width: 451px){
+                            width: 100%;
+                        }
+                    }
+                    .custom-card-content{
+                        margin: 10px 0px 10px 10px;
+                        .text1{
+                            font-weight: 800;
+                        }
+                        .numTxt{
+                            font-size: 24px;
+                            font-weight: bolder;
+                            .totalTxt{
+                                font-size: 12px;
+                            }
+                        }
+                        .text2{
+                            font-weight: 800;
+                        }
+                    }
+                }
+                .graph_cont{
+                    width: 100%;
+                    padding: 5px;
+                    @media only screen and (max-width: 1000px){
+                        max-width: 1000px;
+                        margin: 0 auto;
+                        padding: 10px;
+                    }
+                    .graph_wrap{
+                        .card-custom{
+                            margin-left: 0 !important;
+                            margin-top: 0 !important;
+                            width: 100% !important;
+                            height: 25.5rem !important;
+                            .custom-bar{
+                                width: 90% !important;
+                            
+                            }
+                        }
                     }
                 }
             }
-            .table_cont{
+            .bottom_cont{
+                margin-top: 20px;
                 width: 100%;
-                .table_container{
-                    width: 100% !important;
-                    margin: 0px !important;
-                    padding: 0px 35px 0px 35px;
-                }
-                table.table_header{
-                    width: 100% !important;
-                    display: block !important;
-                    .tr_header{
-                        width: 100%;
-                        display: flex;
-                        justify-content: center;
+                padding: 5px;
+                .table_bg{
+                    background-color: #fff;
+                    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+                    .pagination_cont{
+                        max-width: 1700px;
+                        @media only screen and (max-width: 1000px){
+                            max-width: 1000px;
+                        }
+                        .paginate{
+                            width: 100%;
+                            padding: 30px 50px 0px 0px;
+                            @media only screen and (max-width: 426px){
+                                padding: 30px 0px 0px 0px;
+                            }
+                        }
                     }
-                    .tr_title{
+                    .table_cont{
                         width: 100%;
-                        display: flex;
-                        justify-content: space-between;
-                    }
-                    .tr_dates{
-                        width: 100%;
-                        display: flex;
-                        justify-content: space-around;
-                    }
-                    .tr_underline{
-                        width: 100%;
-                        display: flex;
-                        justify-content: space-between;
-                    }
-                    .tr_input_underline{
-                        width: 100%;
-                        display: flex;
-                        justify-content: space-between;
+                        .table_container{
+                            width: 100% !important;
+                            margin: 0px !important;
+                            padding: 0px 35px 0px 35px;
+                        }
+                        table.table_header{
+                            width: 100% !important;
+                            display: block !important;
+                            .tr_header{
+                                width: 100%;
+                                display: flex;
+                                justify-content: center;
+                            }
+                            .tr_title{
+                                width: 100%;
+                                display: flex;
+                                justify-content: space-between;
+                            }
+                            .tr_dates{
+                                width: 100%;
+                                display: flex;
+                                justify-content: space-around;
+                            }
+                            .tr_underline{
+                                width: 100%;
+                                display: flex;
+                                justify-content: space-between;
+                            }
+                            .tr_input_underline{
+                                width: 100%;
+                                display: flex;
+                                justify-content: space-between;
+                            }
+                        }
                     }
                 }
             }
