--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -12,5 +12,6 @@
 @import './messageAlert.scss';
 @import './projectDataList.scss';
 @import './projectDataCreate.scss';
+@import './sidebar.scss';
 
 
