Personnel Create Frontend

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -13,5 +13,5 @@
 @import './projectDataList.scss';
 @import './projectDataCreate.scss';
 @import './sidebar.scss';
-
+@import './personnelExpenseCreate.scss';
 
