Done modifying web UI design

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -13,5 +13,7 @@
 @import './projectDataList.scss';
 @import './projectDataCreate.scss';
 @import './sidebar.scss';
+@import './personnelExpensesList.scss';
 @import './personnelExpenseCreate.scss';
+
 
