--- a/client/src/assets/scss/pagination.scss
+++ b/client/src/assets/scss/pagination.scss
@@ -74,17 +74,17 @@
           border-bottom-right-radius: 5px;
         }
         &:hover{
-          background-color: #ddd;
+          background-color: #f9f9f9;
         }
         &:disabled{
-          background-color: #0000FF; 
-          color: #fff;
+          background-color: #e0e0e0; 
+          color: #000;
           cursor: not-allowed;
         }
         &:not(:disabled):active,
         &:not(:disabled):focus{
-          background-color: #2196F3;
-          color: #fff;
+          background-color: #f9f9f9;
+          color: #000;
         }
       }
       select{
