--- a/client/src/assets/scss/personnelExpenseCreate.scss
+++ b/client/src/assets/scss/personnelExpenseCreate.scss
@@ -3,14 +3,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding: 30px;
   
     .personnel-container {
-      width: 80%;
+      width: 100%;
       // border: 2px solid #77cae5;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+      // box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
       background-color: #fff;
       margin-bottom: 20px;
       transition: width 0.3s ease;
@@ -62,8 +62,8 @@
               cursor: pointer;
             }
             .emp-select{
-                width: 50%;
-                text-align: center;
+                width: 20%;
+                // text-align: center;
             }
           }
         }
@@ -91,21 +91,21 @@
           justify-content: center;
           align-items: center;
           padding: 10px;
-          border: 1px solid #ccc;
-          border-radius: 10px;
-          background-color: #4CAF50;
-          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-          margin-top: 20px;
+          // border: 1px solid #ccc;
+          // border-radius: 10px;
+          // background-color: #4CAF50;
+          // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          // margin-top: 20px;
           .button {
-            background-color: #4CAF50;
+            background-color: #808080;
             color: white;
             padding: 10px 20px;
             border: none;
-            border-radius: 5px;
+            border-radius: 5px !important;
             cursor: pointer;
             font-weight: bold;
             text-align: center;
-            width: 100%;
+            // width: 10%;
           }
         }
       }
@@ -113,28 +113,30 @@
   
     .personnel-cont-footer {
       display: flex;
-      justify-content: center;
-      width: 340px;
-      margin-top: 20px;
-      gap: 10%;
-      .plus-btn,
-      .minus-btn {
-        width: 40px;
-        height: 40px;
-        border: none;
-        border-radius: 50%;
-        font-size: 24px;
+      width: 100%;
+      flex-direction: column;
+      padding-left: 20px;
+      .personnel-btn-plusminus{
+        display: flex;
+        gap: 1%;
+        .plus-btn,
+        .minus-btn{
+          width: 3%;
+          border-radius: 5px !important;
+          background-color: #808080;
+          color: #fff;
+        }
+      }
+      .personnel-btn-subcancel{
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #008CBA;
-        color: white;
-        cursor: pointer;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: background-color 0.3s ease;
-  
-        &:hover {
-          background-color: #005f7f;
+        gap: 1%;
+        margin-top: 10px;
+        .cancel-btn,
+        .submit-btn{
+          border-radius: 5px !important;
+          width: 10%;
         }
       }
     }
