--- a/client/src/assets/scss/personnelExpensesList.scss
+++ b/client/src/assets/scss/personnelExpensesList.scss
@@ -1,4 +1,4 @@
-.proj_wrapper{
+.personnel_wrapper{
     max-width: 2560px;
     .header_cont{
         margin: 0px 0px 0px 0px;
@@ -8,7 +8,7 @@
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
     }
-    .projectlist_cont_wrapper{
+    .personnel_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
         @media only screen and (max-width: 1000px){
@@ -23,22 +23,22 @@
                 display: none;
             }
         }
-        .projectlist_wrapper{
+        .personnel_wrapper_div{
                     width: 100%;
                     height: 100vh;
                     padding: 10px 30px 10px 30px;
-                    .proj_top_content{
+                    .personnel_top_content{
                         border: 1px solid #fff;
                         border-radius: 5px;
                         background-color: #fff;
-                        .proj_top_body_cont{
+                        .personnel_top_body_cont{
                             background-color: #fff;
                             height: 4rem;
-                            .proj_top_btn_cont{
+                            .personnel_top_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
-                                .proj_btn{
+                                .personnel_btn{
                                     margin-top: 15px;
                                     border: 1px solid #808080;
                                     width: 10rem;
@@ -51,19 +51,19 @@
                                         color: #fff;
                                     }
                                 }
-                                .proj_btn.active{
+                                .personnel_btn.active{
                                     background-color: #808080;
                                     color: #fff;
                                 }
                             }
                         }
-                        .proj_mid_body_cont{
+                        .personnel_mid_body_cont{
                             height: 87vh;
-                            .proj_mid_btn_cont{
+                            .personnel_mid_btn_cont{
                                 margin-left: 5%;
                                 display: flex;
                                 gap: 2%;
-                                .proj_btn{
+                                .personnel_btn{
                                     margin-top: 15px;
                                     border: 1px solid #808080;
                                     width: 10rem;
@@ -76,21 +76,21 @@
                                         color: #fff;
                                     }
                                 }
-                                .proj_btn.active{
+                                .personnel_btn.active{
                                     background-color: #808080;
                                     color: #fff;
                                 }
                             }
-                            .proj_title_table_cont{
+                            .personnel_title_table_cont{
                                         display: flex;
                                         gap: 8%;
                                         padding: 40px 70px;
-                                        .proj_title{
+                                        .personnel_title{
                                             letter-spacing: 2px;
                                             font-weight: bold;
                                             color: #000;
                                         }
-                                        .proj_btn{
+                                        .personnel_btn{
                                             border: 1px solid #808080;
                                             width: 12rem;
                                             height: 35px;
@@ -100,7 +100,7 @@
                                             margin-left: 14px;
                                         }
                             }
-                            .proj_table_wrapper{
+                            .personnel_table_wrapper{
                                 width: 100%;
                                 max-height: 430px;
                                 overflow-y: auto; 
@@ -126,41 +126,78 @@
                                 &::-webkit-scrollbar-thumb:hover {
                                     background-color: #555;
                                 }
-                                .proj_table_cont{
+                                .personnel_table_cont{
                                     padding: 0px 0px 0px 70px;
                                     .table{
                                         width: 97%;
-                                        .proj_table_title{
+                                        .personnel_table_title{
                                             background-color: #808080;
-                                            .proj_table_title_content_vertical{
+                                            .personnel_table_title_content_vertical{
                                                 color: #fff;
                                                 border: none;
                                             }
                                         }
-                                        .proj_table_body{
-                                            .proj_table_body_content_horizantal{
-                                                border: none;
+                                        .personnel_table_body{
+                                            .user_name{
                                                 &:nth-child(odd){
                                                     background-color: #f9f9f9;
                                                 }
                                                 &:nth-child(even){
                                                     background-color: #e0e0e0;
                                                 }
-                                                .proj_table_body_content_vertical{
-                                                    border: none;
-                                                }
+                                            }
+                                            .txt0{
+                                                margin-bottom: 5px;
+                                            }
+                                            .txt1{
+                                                font-size: 14px;
+                                                padding: 5px 0px;
+                                                background-color: #C6D4E7;
+                                                color: #000;
+                                                border-radius: 5px;
+                                            }
+                                            .txt2{
+                                                margin-left: 5px;
+                                                font-size: 14px;
+                                                padding: 5px 0px;
+                                            }
+                                            .txt3{
+                                                margin-left: 5px;
+                                                font-size: 14px;
+                                                padding: 5px 0px;
+                                                background-color: #C6D4E7;
+                                                color: #000;
+                                                border-radius: 5px;
                                             }
                                         }
                                     }
                                 }
                             }
-                            .proj_pagination_wrapper{
-                                // margin-top: 220px;
-                                .proj_pagination_cont{
+                            .personnel_pagination_wrapper{
+                                .personnel_pagination_cont{
                                     display: flex;
                                     justify-content: flex-end;
                                     padding: 20px 20px 0px 20px;
                                     margin: 0px !important;
+                                    .pagination{
+                                        #prevButton,
+                                        #nextButton,
+                                        #lastButton,
+                                        #optionNumber{
+                                            border: 1px solid #34a953;
+                                            background-color: #fff;
+                                            color: #000;
+                                            &:hover{
+                                                background-color: #34a953;
+                                                color: #fff;
+                                            }
+                                        }
+                                        .activeButton{
+                                            background-color: #34a953 !important;
+                                            color: #fff !important;
+                                            border: 1px solid #34a953 !important;
+                                        }
+                                    }
                                 }
                             }
                         }
