Project Create UI revision

--- a/client/src/assets/scss/projectDataCreate.scss
+++ b/client/src/assets/scss/projectDataCreate.scss
@@ -346,7 +346,7 @@
                             display: flex;
                             margin-left: 90%;
                             .inc,.dec{
-                                background-color: #34a953;
+                                background-color: #808080;
                                 color: whitesmoke;
                                 width: 30px;
                                 height: 40px;
