--- a/client/src/assets/scss/sidebar.scss
+++ b/client/src/assets/scss/sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar{
-    width: 150px;
+    width: 200px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -18,8 +18,11 @@
                 a{
                     color: #fff;
                     text-decoration: none;
-                    font-size: 18px;
+                    font-size: 16px;
                 }
+            }
+            .sub_menu{
+                margin-left: 20px;
             }
         }
     }
