--- a/client/src/assets/scss/projectDataCreate.scss
+++ b/client/src/assets/scss/projectDataCreate.scss
@@ -2,11 +2,32 @@
     display: flex;
     flex-direction: column;
     .header_cont{
-        margin: 0px 0px 0px 0px;
+        // margin: 0px 0px 0px 0px;
+        margin-left: 5%;
+        height: 60px;
+        display: flex;
+        gap: 2%;
         .header_container{
             background-color: #fff;
             padding: 5px 5px 10px 5px;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        .header-btn{                        
+            margin-top: 15px;
+            border: 1px solid #808080;
+            width: 10rem;
+            height: 30px;
+            border-radius: 5px !important;
+            background-color: #fff;
+            color: #000;
+        }
+        .header-btn:hover{
+            background-color: #808080;
+            color: #fff;
+        }
+        .h-btn-active{
+            background-color: #808080;
+            color: #fff;
         }
     }
     .proj_content_wrapper{
