Done modifying transitions

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -15,5 +15,7 @@
 @import './sidebar.scss';
 @import './personnelExpensesList.scss';
 @import './personnelExpenseCreate.scss';
+@import './notFound.scss';
+@import './planning.scss';
 
 
