--- a/client/src/assets/scss/personnelExpensesList.scss
+++ b/client/src/assets/scss/personnelExpensesList.scss
@@ -12,7 +12,7 @@
             margin-left: 5%;
             display: flex;
             gap: 2%;
-            .personnel_btn{
+            .header-btn{                        
                 margin-top: 15px;
                 border: 1px solid #808080;
                 width: 10rem;
@@ -20,12 +20,12 @@
                 border-radius: 5px !important;
                 background-color: #fff;
                 color: #000;
-                &:hover{
-                    background-color: #808080;
-                    color: #fff;
-                }
             }
-            .personnel_btn.active{
+            .header-btn:hover{
+                background-color: #808080;
+                color: #fff;
+            }
+            .h-btn-active{
                 background-color: #808080;
                 color: #fff;
             }
