Done adding new screens

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -17,5 +17,6 @@
 @import './personnelExpenseCreate.scss';
 @import './notFound.scss';
 @import './planning.scss';
+@import './costofSalesRegistration.scss';
 
 
